Arquivos sql corrigidos

--- a/app/views/editar/editar_rota_voo.ejs
+++ b/app/views/editar/editar_rota_voo.ejs
@@ -9,7 +9,7 @@
 <body>
     <h1>Atualizar Rota de voo</h1>
 
-    <form action="">
+    <form action="" method="post">
         
     <label for="cod_aeroporto_origem">Cod. Aeroporto Origem</label>
 
