--- a/app/views/cadastro/cadastro_passageiro.ejs
+++ b/app/views/cadastro/cadastro_passageiro.ejs
@@ -18,8 +18,10 @@
 		<input type="text" id="responsavel" name="responsavel" value=""/>
     </br></br>
 
-        <label for="data_nasc">Data de nascimento</label>
-        <input type="date" id="data_nasc" name="data_nasc" min="1910-01-01">
+    <label for="data_nasc">Data de nascimento</label>
+    <input type="text" name="data_nasc" id="data_nasc" name="data_nasc" placeholder="YYYY/MM/DD" 
+    required pattern="^\d{4}\/(0[1-9]|1[012])\/(0[1-9]|[12][0-9]|3[01])" 
+    title="Insira a data no formato YYYY/MM/DD"/>
     </br></br>
 
         <label for="pais">País</label>
@@ -36,7 +38,7 @@
 
             <select name="sexo" id="sexo">
             <option value="M">Masculino</option>
-            <option value="f">Feminino</option>
+            <option value="F">Feminino</option>
             <option value="O">Outros</option>
 
             </select>
@@ -55,4 +57,6 @@
     <input type="submit" />
     </form>
 </body>
+
+
 </html>
