--- a/app/views/editar/editar_passageiro.ejs
+++ b/app/views/editar/editar_passageiro.ejs
@@ -3,41 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
     <title>Passageiros - Editar</title>
 </head>
 <body>
     <h1>Atualizar Passageiro</h1>
-
-    <form action="" method="post">
+    
+    <form action="atualizar/<%= passageiro[0].CD_PSGR %>" method="post">
         <label>Nome</label>
-		<input type="text" id="nome" name="nome" value="" placeholder="Pedro Raposo"/>
+		<input type="text" id="nome" name="nome" value="" placeholder="<%= passageiro[0].NM_PSGR %>"/>
     </br></br>
 
         <label>Responsável</label>
-		<input type="text" id="responsavel" name="responsavel" value=""/>
+		<input type="text" id="responsavel" name="responsavel" value="" />
     </br></br>
 
-        <label for="data_nasc">Data de nascimento</label>
-        <input type="date" id="data_nasc" name="data_nasc" min="1910-01-01">
+    
+    <label for="data_nasc">Data de nascimento</label>
+    <input type="text" name="data_nasc" id="data_nasc" name="data_nasc" placeholder="YYYY/MM/DD" 
+    required pattern="^\d{4}\/(0[1-9]|1[012])\/(0[1-9]|[12][0-9]|3[01])" 
+    title="Insira a data no formato YYYY/MM/DD"/>
     </br></br>
 
-        <label for="pais">País</label>
 
-            <select name="pais" id="pais">
-            <option value="bra">Brasil</option>
-            <option value="fra">França</option>
-            <option value="ita">Itália</option>
+    <label for="pais">País</label>
 
-            </select>
+    <select name="pais" id="pais">
+        <% for(var i=0;i< paises.length;i++){ %>
+            <option value="<%= paises[i].codigo %>"><%= paises[i].nome %></option>
+        <% } %>
+
+    </select>
     </br></br>
+        
         
         <label for="sexo">Sexo</label>
 
             <select name="sexo" id="sexo">
-            <option value="m">Masculino</option>
-            <option value="f">Feminino</option>
-            <option value="o">Outros</option>
+            <option value="M">Masculino</option>
+            <option value="F">Feminino</option>
+            <option value="O">Outros</option>
 
             </select>
     </br></br>
@@ -45,16 +50,67 @@
         <label for="estado_civil">Estado Civil</label>
 
             <select name="estado_civil" id="estado_civil">
-            <option value="bra">Solteiro</option>
-            <option value="fra">Casado</option>
-            <option value="ita">Divorciado</option>
-            <option value="ita">Viuvo</option>
+            <option value="S">Solteiro</option>
+            <option value="C">Casado</option>
+            
 
             </select>
     </br></br>
 
     <input type="submit" />
-    <button>Deletar</button>
+    <br> <br>
+    
     </form>
+    
+
+    <button id="deletar">Deletar</button>
+    
+    
+
+    
 </body>
+
+<script>
+
+    $(document).ready(function(){
+
+       var passageiro = '<%- JSON.stringify(passageiro[0]) %>';
+       passageiro = JSON.parse(passageiro)
+       
+
+       $.ajax({
+           url: '/passageiros/getResponsavel',
+           data: {data: passageiro.CD_PSGR_RESP},
+           success: response =>{
+            $('#responsavel').attr('placeholder',  response);
+           },
+           error: err =>{
+               console.log(err);
+           }
+       })
+
+       //Botão de deletar
+
+       $('#deletar').click(function(){
+            let check = confirm('Quer deletar amigao?');
+            
+            if(check){
+                $.ajax({
+                    url: '/passageiros/editar/deletar/' + passageiro.CD_PSGR  ,
+                    method: 'POST',
+                    success: response =>{
+                        console.log(response);
+                    }
+                })
+            }
+       });
+
+
+       $('#data_nasc').val(passageiro.DT_NASC_PSGR);
+       $('#pais').val(passageiro.CD_PAIS);
+       $('#sexo').val(passageiro.IC_SEXO_PSGR);
+       $('#estado_civil').val(passageiro.IC_ESTD_CIVIL);
+        
+    });
+</script>
 </html>
