Organização das rotas e mundança geral nos arquivos

--- a/app/views/editar/editar_passageiro.ejs
+++ b/app/views/editar/editar_passageiro.ejs
@@ -100,6 +100,11 @@
                     method: 'POST',
                     success: response =>{
                         console.log(response);
+
+                        set(function(){ 
+                            alert(response);
+                            location.href = '/passageiros';
+                        }, 1000);
                     }
                 })
             }
