--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -24,5 +24,9 @@
         <li> <a href="/uf"> UF</a> </li>
         
     </ul>
+
+    <div id="message">
+        <h4> <%= message %></h4>
+    </div>
 </body>
 </html>
