--- a/app/views/lista/rotas-voo.ejs
+++ b/app/views/lista/rotas-voo.ejs
@@ -9,6 +9,13 @@
 <body>
     <h1>Rotas de voo</h1>
 
+    <h2>Filtros</h2>
+    
+<input type="radio" id="com_reservas" name="reservas" value="">
+<label for="com_reservas">Somente com reservas</label><br>
+<input type="radio" id="sem_reservas" name="reservas" value="">
+<label for="sem_reservas">Sem reservas</label><br><br><br>
+
     <form action="">
         <input type="text" name="busca" id="busca">
         <button type="submit"> Enviar</button>
