--- a/app/views/lista/voos.ejs
+++ b/app/views/lista/voos.ejs
@@ -9,6 +9,13 @@
 <body>
     <h1>Voos</h1>
 
+    <h2>Filtros</h2>
+    
+    
+    <label>Local de origem </label>
+    <input type="text" id="local_orig" name="local_orig" value=""/><br><br>
+
+
     <form action="">
         <input type="text" name="busca" id="busca">
         <button type="submit"> Enviar</button>
