--- a/app/views/lista/aeronaves.ejs
+++ b/app/views/lista/aeronaves.ejs
@@ -9,6 +9,12 @@
 <body>
     <h1>Aeronaves</h1>
 
+    <h2>Filtros</h2>
+    
+    
+    <label>Local de origem </label>
+    <input type="text" id="local_orig" name="local_orig" value=""/><br><br>
+
     <form action="" method="get">
         <input type="text" name="busca" id="busca">
         <button type="submit"> Enviar</button>
