--- a/app/views/lista/reservas.ejs
+++ b/app/views/lista/reservas.ejs
@@ -9,6 +9,15 @@
 <body>
     <h1>Reservas</h1>
 
+    <h2>Filtros</h2>
+
+    <h3>Código do voo</h3>
+
+    <label>Maior que: </label>
+    <input type="number" id="maior_cod" name="cod_voo" value=""/><br>
+    <label>Menor que:</label>
+    <input type="number" id="menor_cod" name="cod_voo" value=""/><br><br>
+
     <form action="">
         <input type="text" name="busca" id="busca">
         <button type="submit"> Enviar</button>
