--- a/app/views/lista/reservas.ejs
+++ b/app/views/lista/reservas.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
     <title>Reservas</title>
 </head>
 <body>
@@ -27,5 +27,127 @@
         <button> Cadastrar</button>
     </a>
     
+    <div id="resultados">
+        <table id="table-reservas">
+        
+                <tr>
+                    <td>CD_PSGR</td>
+                    <td>NR_VOO</td>
+                    <td>DT_SAIDA_VOO</td>
+                    <td>PC_DESC_PASG</td>
+                    <td>Editar</td>
+                </tr>
+
+
+            
+                <% for(var i=0;i< reservas.length;i++){ %>
+                    <tr class="resultado-passageiros">
+                        <td><%= reservas[i].CD_PSGR %></td>
+                        <td><%= reservas[i].NR_VOO %></td>
+                        <td><%= reservas[i].DT_SAIDA_VOO %></td>
+                        <td><%= reservas[i].PC_DESC_PASG %></td>
+                        
+                        <td> 
+                            <a href="/reservas/editar/<%=reservas[i].CD_PSGR %>">
+                                <button type="button"> Editar</button></td>
+                            </a>
+                            
+                    </tr>
+                <% } %>
+        
+        
+        
+        </table>
+    </div>
+    
 </body>
+<script>
+    $(document).ready(function(){
+
+        
+        
+        $('#send-busca').click(function(){
+           
+            const busca = $('#busca').val();
+
+            if(busca){
+                $.ajax({
+                    url: '/passageiros/busca' ,
+                    method: 'GET',
+                    data: {busca: busca},
+                    success: response =>{
+                        //console.log(response);
+
+                        const passageiros = response;
+                        Vasco = passageiros;     
+                        $('tr').remove(".resultado-passageiros");
+
+                        const table = document.getElementById('table-passageiros');
+
+                        passageiros.forEach(element => {
+
+                            let tr = document.createElement('tr');
+                            tr.className = "resultado-passageiros";
+
+                            var td1 = document.createElement('td');
+                            td1.innerHTML  = element.CD_PSGR;
+
+                            var td2 = document.createElement('td');
+                            td2.innerHTML = element.NM_PSGR;
+
+                            var td3 = document.createElement('td');
+                            td3.innerHTML = element.IC_SEXO_PSGR;
+
+                            var td4 = document.createElement('td');
+                            td4.innerHTML = element.DT_NASC_PSGR ;
+
+                            var td5 = document.createElement('td');
+                            td5.innerHTML = element.IC_ESTD_CIVIL ;
+
+                            var td6 = document.createElement('td');
+                            element.IC_CD_PSGR_RESP == undefined ? td6.innerHTML = '' : td6.innerHTML = element.IC_CD_PSGR_RESP ;
+
+                            var td7 = document.createElement('td');
+                            td7.innerHTML = element.CD_PAIS ;
+
+                            var td8 = document.createElement('td');
+                            
+                            var a = document.createElement('a');
+                            a.href = '/passageiros/editar/' + element.CD_PSGR;
+
+                            var button = document.createElement('button');
+                            button.innerHTML = 'Editar';
+
+                            a.appendChild(button);
+
+                            td8.appendChild(a);
+
+
+                            tr.appendChild(td1);
+                            tr.appendChild(td2);
+                            tr.appendChild(td3);
+                            tr.appendChild(td4);
+                            tr.appendChild(td5);
+                            tr.appendChild(td6);
+                            tr.appendChild(td7);
+                            tr.appendChild(td8);
+
+                            table.appendChild(tr);
+
+                        });
+                        
+                        
+                        
+                    },
+                });
+            }
+        });
+
+        
+
+
+      
+        
+    });
+</script>
 </html>
