--- a/app/views/lista/companhias.ejs
+++ b/app/views/lista/companhias.ejs
@@ -9,6 +9,22 @@
 <body>
     <h1>Companhias aéreas</h1>
 
+    <h2>Filtros</h2>
+    
+    <label for="nome">País:</label>
+
+        <select name="nome" id="nome">
+                <option value="nenhum">Nenhum</option>
+                <% for(var i=0;i< paises.length;i++){ %>
+                    
+                        <option value="<%= paises[i].nome %>"><%= paises[i].nome %></option>
+                        
+                    
+                <% } %>
+
+            </select>
+    </br></br>
+
     <form action="">
         <input type="text" name="busca" id="busca">
         <button type="submit"> Enviar</button>
